@@ -17,6 +17,8 @@
 	Better detection of write errors on file copying.  The error was reported,
 	but it wasn't treated as a hard error specific case related to caching.
 
+	Make :siblnext and :siblprev commands respect dot and name filters.
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
